# wordmarker

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config.yaml  main.py  requirements.txt  scripts.py  setup.cfg  setup.py
data/in/: README.txt
docs/: README.txt  index.html
docs/source/: conf.py  index.rst  modules.rst  quickstart.rst  wordmarker.contexts.rst  wordmarker.creatives.rst  wordmarker.data.rst  wordmarker.loaders.rst  wordmarker.rst  wordmarker.templates.rst  wordmarker.utils.rst
img/: README.txt
models/: README.txt
notebooks/: temp.ipynb
template/in/: README.txt
tests/: test.py
tests/contexts/: contextstest.py
tests/templates/: templatetest.py
tests/utils/: UtilsTest.py
wordmarker/: __init__.py
wordmarker/contexts/: __init__.py  application_context.py  context.py  system_context.py  xml_context.py  yaml_context.py
wordmarker/creatives/: __init__.py  builder.py  factory.py
wordmarker/data/: __init__.py  formatter.py  resource.py
wordmarker/loaders/: __init__.py  default_resource_loader.py  resource_loader.py  xml_resource_loader.py  yaml_resource_loader.py
wordmarker/scripts/: quickstart.py
wordmarker/templates/: __init__.py  csv_template.py  pdbc_template.py  word_template.py
wordmarker/utils/: __init__.py  csv.py  file.py  logger.py  yaml.py
